--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -2,5 +2,6 @@ body
 {
     color: blueviolet;
     align-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
