--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -4,4 +4,5 @@ body
     align-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: blue;
 }
