--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,27 +1,23 @@
 body
 {
-    color: red;
+    color: #333;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    background-color: blue;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-#cabecera
+#conteiner
 {
-    background-color: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: white;
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
 
-#cabecera #tagline
+#conteiner h1
 {
-    padding: 0 0 0 1em;
-    font-weight: normal;
-    font-size: 0.8em;
-}
+    font-size: 20px;
+} 
